fixed work section mobile

--- a/style.css
+++ b/style.css
@@ -640,8 +640,8 @@ html {
     /* WORK */
     .worksec {
         background-color: #E5EBE2;
-        padding-right: 2em;
-        padding-left: 2em;
+        padding-right: 1em;
+        padding-left: 1em;
         padding-top: 5em;
         padding-bottom: 5em;
         margin: auto;
